kubernetes/model-service-v2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-service-v2-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: model-service-pod
      version: v2
  template:
    metadata:
      name: model-service-pod
      labels:
        app: model-service-pod
        version: v2
    spec:
      containers:
      - name: model-service-pod
        image: ghcr.io/doda25-team6/model-service:v0.1.3
        ports:
        - containerPort: 8081
        volumeMounts:
        - name: model-volume
          mountPath: /app/output # like in Docker Compose
      volumes:
      - name: model-volume
        persistentVolumeClaim:
          claimName: model-pvc
