kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: model-service
spec:
  selector:
    app: model-service-pod
  ports:
    - port: 8081
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app-pod
  ports:
    - port: 8080
      targetPort: 8080
